--- a/style.scss
+++ b/style.scss
@@ -48,10 +48,9 @@ $OpacityAnim: 1;
 
 @mixin footerDisplay{
     background-color: rgb(53,53,53);
-    padding-top: 1em;
-    margin-top: 2em;
+    margin-top: 1em;
     width: 100%;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
     overflow: hidden;
     .ImageFooter{
         margin-top: 2em;
@@ -59,7 +58,7 @@ $OpacityAnim: 1;
         margin-left: 5%;
         img{
             color: white;
-            width: 90%;
+            width: 40%;
         }
     }
     .Proposer ,.Partenaire,.Mention,.Contact{
@@ -85,7 +84,7 @@ $OpacityAnim: 1;
 @mixin presentationVignetteDesktop {
     display: flex;
     flex-direction: column;
-    font-size: 2.3em;
+    font-size: 1.0em;
     font-family: $Police1__Bold;
     justify-content: space-around;
     align-items: center;
@@ -93,7 +92,7 @@ $OpacityAnim: 1;
     position: relative;
     margin-right: 5%;
     margin-left: 1em;
-    border-radius: 60px;
+    border-radius: 15px;
     padding-top: 2%;
     padding-bottom: 2%;
     box-shadow: 0px 2px 20px #c2c2c2;
@@ -103,7 +102,7 @@ $OpacityAnim: 1;
     }
     &__pastille{
         position:absolute;
-        left: 40%;
+        left: 47%;
         bottom: -10%;
         background-color: $primaryColor;
         border-radius: 100px;
@@ -460,12 +459,28 @@ footer{
    @include footerDisplay();  
 }
 @media screen and (min-width: 800px) {
+
+    header{
+        .LogoCentral{
+            width: 30%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+    }
+    .AnimationLoadingPage{
+        &__image{
+            width: 20%;
+        }
+
+    }
     .localisation{
         margin-left: auto;
         margin-right: auto;
-        width: 50%;
+        width: 30%;
         border-radius: 34px;
         margin-top: 2em;
+        margin-bottom: 2em;
         &__iconLocalisation{
             font-size: 2em;
             
@@ -474,7 +489,7 @@ footer{
         }
         &__textLocalisation{
             margin-left: 1.5em;
-            font-size: 2em;
+            font-size: 1.5em;
             white-space: nowrap;
             padding-right: 13%;
         }
@@ -486,35 +501,45 @@ footer{
         margin-top: 0em;
         display: flex;
         flex-direction: row;
+        width: auto;
+        margin-bottom: 2em;
         &__Slogan{
             margin-top: 0em;
             margin-top: 2em;
-            font-size: 2em;
+            font-size: 1em;
             margin-left: 5%;
             margin-right: 5%;
             text-align:right;
+            white-space: nowrap;
         }
         &__sousTitre{
-            font-size: 1.3em;
+            font-size: 1em;
             text-align: left;
             margin-right: 1em;
         }
         &__btnExplorerNosRestaurants{
+            width: 24%;
             border-radius: 1em;
             margin-right: 1em;
+            white-space: nowrap;
             p{
-                font-size: 2em;
+                margin-left: auto;
+                margin-right: auto;
+                font-size: 1em;
                 text-align: center;
             }
     
         }
     }
     .TitreFonctionnement{
-        font-size: 3em;
+        margin-top: 0em;
+        font-size: 2em;
         text-align: center
     }
     .vignettesFonctionnement{
         display: flex;
+        margin-left: 10%;
+        margin-right: 10%;
 
 
         &__ChoixRestaurant{
@@ -545,7 +570,7 @@ footer{
     
        
         &__titre{
-            font-size: 3em;
+            font-size: 2em;
             text-align: center;
     
         }
@@ -561,25 +586,23 @@ footer{
             border-radius: 0px;
             background-color: white;
             box-shadow: 0px 5px 10px #C2C2C2;
-            height: 100em;
+            height: 20em;
             &__image{
                 overflow: hidden;
-                height: 70%;
+                height: 50%;
                 position: relative;
                 img{
                     position: absolute;
-                    left: -90%;
-                    height:100% ;
-                    width: auto;
+                    width: 100%;
                 }
                 &__Nouveau{
                     z-index: 3;
                     position: absolute;
-                    right: 20%;
+                    right: 2%;
                     top: 2%;
                     background-color: rgb(158,227,208);
                     font-family: $Police1;
-                    font-size: 2.4em;
+                    font-size: 1.4em;
     
                     border-radius: 14px;
                     p{
@@ -596,26 +619,24 @@ footer{
                 margin-left: 4%;
                 &__text{
                     &__Nom{
-                        font-size: 3em;
+                        font-size: 1em;
                         font-family: $Police1__Bold;
-                        margin-bottom: 0em;
                         text-align: center;
                         height: 3em;
                     }
                     &__Adresse{
                         font-family: $Police1__Light;
-                        font-size: 2.3em;
+                        font-size: 0.8em;
                         margin-top: 0em;
                         text-align: center;
                     }
                 }
                 &__logo{
-                    margin-left: 30%;
-                    margin-top: 30%;
+                    margin-left: 20%;
+                    margin-top: 10%;
                     color: black;
                     position: relative;
-    
-                    font-size: 4em;
+                    font-size: 2em;
     
                     i{
                         position: absolute;
