--- a/RestaurantCss.scss
+++ b/RestaurantCss.scss
@@ -101,6 +101,7 @@
     }
 }
 header{
+    position: relative;
     width: 100%;
     margin-top: 5%;
     display: flex;
@@ -108,10 +109,10 @@ header{
     margin-bottom: 5%;
     
         .LogoBackSparow{
-            font-size: 2em;
-            margin-right: 20%;
-            margin-left: 5%;
+            position: absolute;
+            font-size: 1.8em;
             color: black;
+            left: 3%;
             a{
                 color: black;
             text-decoration: none;
@@ -122,8 +123,11 @@ header{
 
     
     .LogoCentral{
-        img{
-            width: 90%;
+        width: 100%;
+
+        &__image{
+            margin-left: 25%;
+            width: 60%;
         }
     }
     
@@ -162,9 +166,13 @@ body{
         margin-top: 1em;
         display: flex;
         justify-content: space-around;
-        font-size: 0.8em;
+        
         align-items: center;
         font-family: 'Shrikland';
+        h1{
+            margin-left: -10%;
+            font-size: 1.8em;
+        }
         &__logo{
             color: black;
             position: relative;
@@ -244,12 +252,14 @@ body{
         justify-content: space-between;
         animation:animVignette 1s 300ms both ease-out ;
         &__Block{
-            width: 80%;
+            width: 90%;
+             overflow: hidden;
+            
         }
         
         
             &__titre{
-                font-size: 1em;
+                font-size: 1.2em;
                 font-family: $Police1__Bold;
                 margin-left: 5%;
                 
@@ -266,9 +276,8 @@ body{
             }
             &__Description{
                 
-                font-size: 0.8em;
+                font-size: 1.1em;
                 font-family: $Police1;
-                display: flex;
                 margin-left: 1em;
                 margin-top: 0em;
                 white-space: nowrap;
@@ -292,7 +301,7 @@ body{
             p{
                 font-family: $Police1__Light;
                 font-weight: 700;
-                font-size: 1em;
+                font-size: 1.2em;
                 margin-right: 0.5em;
                 margin-bottom: 20%;}
             
@@ -324,7 +333,7 @@ body{
     } 
     &:hover{
         .Menu__Vignette__Block{
-            max-width: 70%;
+            width: 60%;
             height: 100%;
             overflow: hidden;
             transition: width 500ms;
@@ -371,8 +380,8 @@ footer{
             margin-bottom: 5%;
             
                 .LogoBackSparow{
-                    font-size: 500%;
-                    margin-left: 5%;
+                    font-size: 2em;
+                    margin-left: 2%;
                     color: black;
                     a{
                         color: black;
@@ -384,10 +393,10 @@ footer{
         
             
             .LogoCentral{
-                flex: 2;
-                margin-right: none;
+                width: 100%;
                 img{
-                    width: 80%;
+                    margin-left: 40%;
+                    width: 20%;
                 }
             }
             
@@ -404,6 +413,18 @@ footer{
             }
         }
         .Menu{
+            &__CathegorieEntreePlat{
+                display: flex;
+                &__Cathegorie{
+                    width: 50%;
+                    display: flex;
+                    flex-direction: column;
+                }
+            }
+            &__vignette{
+                display: flex;
+                flex-direction: column;
+            }
             &__NomEtCoeur{
                 font-size: 2em;
                 &__logo{
@@ -533,7 +554,7 @@ footer{
         
                         i{
                            
-                            font-size: 6em;
+                            font-size: 4em;
                             color: white;
                             transition: transform 500ms;
                         }
