--- a/style.scss
+++ b/style.scss
@@ -251,12 +251,13 @@ header{
         display: flex;
         width: 100%;
         justify-content: center;
-    }
-    .LogoCentral .LogoCentral__image{
+        &__image{
         width: 70%;
     
         
     }
+    }
+    
 
 }
 
@@ -356,7 +357,6 @@ header{
     &__titre{
         font-family: $Police1__Bold;
         font-size: 2em;
-        margin-left: 5%;
         margin-bottom: 0em;
         background-color: $backgroundGreyLighter;
 
@@ -462,13 +462,17 @@ footer{
 
     header{
         .LogoCentral{
-            width: 30%;
+            width: 100%;
             margin-left: auto;
             margin-right: auto;
+            &__image{
+                width: 20%;
+            }
         }
 
     }
     .AnimationLoadingPage{
+        top:20%;
         &__image{
             width: 20%;
         }
