--- a/RestaurantCss.css
+++ b/RestaurantCss.css
@@ -49,6 +49,13 @@
   }
 }
 
+/*
+
+Debut de la presentation pour Mobil 
+
+
+
+*/
 header {
   position: relative;
   width: 100%;
@@ -133,16 +140,18 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   font-family: 'Shrikland';
+  position: relative;
 }
 
 .Menu__NomEtCoeur h1 {
-  margin-left: -10%;
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+  margin-left: 5%;
   font-size: 1.8em;
 }
 
@@ -151,6 +160,7 @@ body {
   position: relative;
   font-size: 1em;
   font-weight: 2em;
+  margin-right: 10%;
 }
 
 .Menu__NomEtCoeur__logo i {
@@ -327,6 +337,14 @@ body {
   margin-right: auto;
   border-radius: 90px;
   margin-top: 2em;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+}
+
+.Bouton:hover {
+  opacity: 0.8;
+  -webkit-box-shadow: 10px 20px 20px #888888;
+          box-shadow: 10px 20px 20px #888888;
 }
 
 .Bouton p {
@@ -377,6 +395,12 @@ footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
   margin-bottom: 0em;
 }
 
+/*
+
+    debut disposition DeskTop
+    
+    
+    */
 @media screen and (min-width: 900px) {
   header {
     width: 100%;
@@ -429,22 +453,13 @@ footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .Menu__vignette {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
   .Menu__NomEtCoeur {
-    font-size: 2em;
+    font-size: 1.4em;
   }
   .Menu__NomEtCoeur__logo {
     color: black;
     position: relative;
-    font-size: 1em;
+    font-size: 0.7em;
     font-weight: 2em;
   }
   .Menu__NomEtCoeur__logo__ecran {
@@ -461,22 +476,26 @@ footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
     bottom: -3.9em;
   }
   .Menu__NomEtCoeur i {
-    font-size: 3em;
+    font-size: 2.5em;
   }
   .Menu__Cath {
     margin-left: 5%;
   }
   .Menu__Cath__text {
-    font-size: 3.2em;
+    margin-left: 40%;
+    font-size: 1.5em;
   }
   .Menu__Cath__soulignement {
+    margin-left: 40%;
     width: 10%;
+    max-width: 6em;
   }
   .Menu__Vignette {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     width: 90%;
+    max-width: 40em;
     margin-top: 2em;
     margin-left: auto;
     margin-right: auto;
@@ -492,12 +511,12 @@ footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
             animation: animVignette 1s 300ms both ease-out;
   }
   .Menu__Vignette__Block {
-    width: 100%;
+    width: 80%;
   }
   .Menu__Vignette__titre {
-    font-size: 1.6em;
+    font-size: 1.2em;
     font-family: "RobotoBold";
-    margin-left: 5%;
+    margin-left: 1em;
   }
   .Menu__Vignette__titre p {
     margin-bottom: 0em;
@@ -506,12 +525,12 @@ footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
     overflow: hidden;
   }
   .Menu__Vignette__Description {
-    font-size: 1.3em;
+    font-size: 1.0em;
     font-family: "Roboto";
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-left: 5%;
+    margin-left: 1em;
     margin-top: 0em;
     white-space: nowrap;
   }
@@ -531,7 +550,7 @@ footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
   .Menu__Vignette__ValidatorEtPrix__Prix p {
     font-family: "RobotoLight";
     font-weight: 700;
-    font-size: 2em;
+    font-size: 1.6em;
     margin-right: 0.5em;
     margin-bottom: 20%;
   }
@@ -553,7 +572,7 @@ footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
             align-items: center;
   }
   .Menu__Vignette__ValidatorEtPrix__Validator__Icon i {
-    font-size: 4em;
+    font-size: 3.5em;
     color: white;
     -webkit-transition: -webkit-transform 500ms;
     transition: -webkit-transform 500ms;
@@ -577,14 +596,14 @@ footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
   .Bouton {
     background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
     background: linear-gradient(#FF79DA, #9356DC);
-    width: 20%;
+    width: 15%;
     margin-left: auto;
     margin-right: auto;
     border-radius: 90px;
     margin-top: 2em;
   }
   .Bouton p {
-    font-size: 2em;
+    font-size: 1em;
     text-align: center;
     color: white;
     font-family: "Roboto";
