--- a/RestaurantCss.scss
+++ b/RestaurantCss.scss
@@ -100,6 +100,15 @@
 
     }
 }
+
+
+/*
+
+Debut de la presentation pour Mobil 
+
+
+
+*/
 header{
     position: relative;
     width: 100%;
@@ -165,20 +174,23 @@ body{
     &__NomEtCoeur{
         margin-top: 1em;
         display: flex;
-        justify-content: space-around;
         
         align-items: center;
         font-family: 'Shrikland';
+        position:relative;
         h1{
-            margin-left: -10%;
+            flex: 2;
+            margin-left: 5%;
             font-size: 1.8em;
         }
         &__logo{
+
             color: black;
             position: relative;
 
             font-size: 1em;
             font-weight:2em ;
+            margin-right: 10%;
 
             i{
                 position: absolute;
@@ -359,6 +371,13 @@ body{
         margin-right: auto;
         border-radius: 90px;
         margin-top: 2em;
+        transition: all 300ms;
+            &:hover{
+                opacity:0.8;
+                box-shadow: 10px 20px 20px #888888;
+                
+
+            }
         p{
             font-size: 1em;
             text-align: center;
@@ -371,6 +390,14 @@ footer{
     @include footerDisplay();
     }
 
+
+
+    /*
+
+    debut disposition DeskTop
+    
+    
+    */
     @media screen and (min-width: 900px){
         header{
             width: 100%;
@@ -421,17 +448,13 @@ footer{
                     flex-direction: column;
                 }
             }
-            &__vignette{
-                display: flex;
-                flex-direction: column;
-            }
             &__NomEtCoeur{
-                font-size: 2em;
+                font-size: 1.4em;
                 &__logo{
                     color: black;
                     position: relative;
         
-                    font-size: 1em;
+                    font-size: 0.7em;
                     font-weight:2em ;
          
                     &__ecran{
@@ -452,21 +475,22 @@ footer{
         
                 }
                 i{
-                    font-size: 3em;
+                    font-size: 2.5em;
                 }
                 
         
             }
             &__Cath{
-        
-        
                 margin-left: 5%;
                 &__text{
-                font-size: 3.2em;
+                    margin-left: 40%;
+                font-size: 1.5em;
         
                 }
                 &__soulignement{
+                    margin-left: 40%;
                     width: 10%;
+                    max-width: 6em;
                 }
                 
         
@@ -476,6 +500,7 @@ footer{
             &__Vignette{
                 display: flex;
                 width: 90%;
+                max-width: 40em;
                 margin-top: 2em;
                 margin-left: auto;
                 margin-right: auto;
@@ -486,14 +511,14 @@ footer{
                 justify-content: space-between;
                 animation:animVignette 1s 300ms both ease-out ;
                 &__Block{
-                    width: 100%;
+                    width: 80%;
                 }
                 
                 
                     &__titre{
-                        font-size: 1.6em;
+                        font-size: 1.2em;
                         font-family: $Police1__Bold;
-                        margin-left: 5%;
+                        margin-left: 1em;
                         
                         
                         p{
@@ -508,10 +533,10 @@ footer{
                     }
                     &__Description{
                         
-                        font-size: 1.3em;
+                        font-size: 1.0em;
                         font-family: $Police1;
                         display: flex;
-                        margin-left: 5%;
+                        margin-left: 1em;
                         margin-top: 0em;
                         white-space: nowrap;
                         p{
@@ -534,7 +559,7 @@ footer{
                     p{
                         font-family: $Police1__Light;
                         font-weight: 700;
-                        font-size: 2em;
+                        font-size: 1.6em;
                         margin-right: 0.5em;
                         margin-bottom: 20%;}
                     
@@ -554,7 +579,7 @@ footer{
         
                         i{
                            
-                            font-size: 4em;
+                            font-size: 3.5em;
                             color: white;
                             transition: transform 500ms;
                         }
@@ -587,13 +612,13 @@ footer{
         }
         .Bouton{
             background: linear-gradient(#FF79DA,#9356DC);
-                width: 20%;
+                width: 15%;
                 margin-left: auto;
                 margin-right: auto;
                 border-radius: 90px;
                 margin-top: 2em;
                 p{
-                    font-size: 2em;
+                    font-size: 1em;
                     text-align: center;
                     color: white;
                     font-family: $Police1;
