--- a/style.css
+++ b/style.css
@@ -254,6 +254,8 @@ header .LogoCentral__image {
   border-radius: 90px;
   margin-top: 1em;
   margin-bottom: 1em;
+  -webkit-transition: opacity 200ms;
+  transition: opacity 200ms;
 }
 
 .AnnonceSlogan__btnExplorerNosRestaurants p {
@@ -261,6 +263,12 @@ header .LogoCentral__image {
   text-align: center;
   color: white;
   font-family: "Roboto";
+}
+
+.AnnonceSlogan__btnExplorerNosRestaurants:hover {
+  opacity: 0.6;
+  -webkit-box-shadow: 10px 10px 10px #888888;
+          box-shadow: 10px 10px 10px #888888;
 }
 
 .TitreFonctionnement {
@@ -431,12 +439,17 @@ header .LogoCentral__image {
   background-color: white;
   -webkit-box-shadow: 0px 5px 10px #C2C2C2;
           box-shadow: 0px 5px 10px #C2C2C2;
-  height: AUTO;
 }
 
 .Restaurants__vignette__image {
   overflow: hidden;
   position: relative;
+  -webkit-transition: opacity 300ms;
+  transition: opacity 300ms;
+}
+
+.Restaurants__vignette__image:hover {
+  opacity: 0.8;
 }
 
 .Restaurants__vignette__image img {
@@ -476,6 +489,12 @@ header .LogoCentral__image {
   font-size: 1.5em;
   font-family: "RobotoBold";
   margin-bottom: 0em;
+  -webkit-transition: opacity 300ms;
+  transition: opacity 300ms;
+}
+
+.Restaurants__vignette__description__text__Nom:hover {
+  opacity: 0.8;
 }
 
 .Restaurants__vignette__description__text__Adresse {
