--- a/style.scss
+++ b/style.scss
@@ -307,11 +307,17 @@ header{
         border-radius: 90px;
         margin-top: 1em;
         margin-bottom: 1em;
+        transition: opacity 200ms;
         p{
             font-size: 1.4em;
             text-align: center;
             color: white;
             font-family: $Police1;
+        }
+        &:hover{
+            opacity:0.6;
+            box-shadow: 10px 10px 10px #888888;
+
         }
 
     }
@@ -374,10 +380,13 @@ header{
         width: 90%;
         background-color: white;
         box-shadow: 0px 5px 10px #C2C2C2;
-        height: AUTO;
         &__image{
             overflow: hidden;
             position: relative;
+            transition: opacity 300ms;
+            &:hover{
+                opacity:0.8
+            }
             img{
                 min-height:100% ;
                 width: 100%;
@@ -406,6 +415,10 @@ header{
                     font-size: 1.5em;
                     font-family: $Police1__Bold;
                     margin-bottom: 0em;
+                    transition: opacity 300ms;
+            &:hover{
+                opacity:0.8
+            }
                 }
                 &__Adresse{
                     font-family: $Police1__Light;
