--- a/RestaurantCss.css
+++ b/RestaurantCss.css
@@ -106,7 +106,6 @@ body {
 .PhotoRestaurant {
   width: 100%;
   height: 20em;
-  background-color: blue;
   position: relative;
   overflow: hidden;
 }
@@ -431,9 +430,10 @@ footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
   }
   .PhotoRestaurant {
     width: 100%;
-    height: 50em;
+    height: 20em;
   }
   .PhotoRestaurant img {
+    top: -120%;
     left: -10%;
     width: 120%;
     min-height: 30em;
