--- a/RestaurantCss.scss
+++ b/RestaurantCss.scss
@@ -151,7 +151,6 @@ body{
 .PhotoRestaurant{
     width: 100%;
     height: 20em;
-    background-color: blue;
     position: relative;
     overflow: hidden;
     img{
@@ -431,8 +430,9 @@ footer{
     
         .PhotoRestaurant{
             width: 100%;
-            height: 50em;
+            height: 20em;
             img{
+            top:-120%;
         left: -10%;
         width: 120%;
         min-height: 30em;
