--- a/style.scss
+++ b/style.scss
@@ -71,6 +71,9 @@ $OpacityAnim: 1;
         i{
             margin-right: 5%;
         }
+        a{
+            text-decoration: none;color: white;
+        }
         p{
             margin-bottom: 0em;
         }
@@ -702,6 +705,10 @@ footer{
     }
     .Contact{
         margin-right: 1em;
+    }
+    a{
+        text-decoration: none;
+        color: white;
     }
 }
     
