--- a/RestaurantCss.css
+++ b/RestaurantCss.css
@@ -390,6 +390,11 @@ footer .Proposer i, footer .Partenaire i, footer .Mention i, footer .Contact i {
   margin-right: 5%;
 }
 
+footer .Proposer a, footer .Partenaire a, footer .Mention a, footer .Contact a {
+  text-decoration: none;
+  color: white;
+}
+
 footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
   margin-bottom: 0em;
 }
@@ -643,6 +648,10 @@ footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
   }
   footer .Proposer i, footer .Partenaire i, footer .Mention i, footer .Contact i {
     margin-right: 5%;
+  }
+  footer .Proposer a, footer .Partenaire a, footer .Mention a, footer .Contact a {
+    text-decoration: none;
+    color: white;
   }
   footer .Proposer p, footer .Partenaire p, footer .Mention p, footer .Contact p {
     margin-bottom: 0em;
