--- a/RestaurantCss.scss
+++ b/RestaurantCss.scss
@@ -38,6 +38,9 @@
         i{
             margin-right: 5%;
         }
+        a{
+            text-decoration: none;color: white;
+        }
         p{
             margin-bottom: 0em;
         }
@@ -76,6 +79,9 @@
             margin-left: 5%;
             i{
                 margin-right: 5%;
+            }
+            a{
+                text-decoration: none;color: white;
             }
             p{
                 margin-bottom: 0em;
